--- a/opdracht2/5makeinmake/Makefile
+++ b/opdracht2/5makeinmake/Makefile
@@ -15,14 +15,9 @@ HEADERS += melody.hpp
 HEADERS += note_player.hpp
 HEADERS += fur_elise.hpp
 
+SOURCES += melody.cpp
 HEADERS += note_player_gpio.hpp
 SOURCES += note_player_gpio.cpp
-
-HEADERS += note_player_print.hpp
-SOURCES += note_player_print.cpp
-
-HEADERS += note_fileprint.hpp
-SOURCES += note_fileprint.cpp
 
 HEADERS += rtttl_player.hpp
 SOURCES += rtttl_player.cpp
@@ -33,4 +28,4 @@ SEARCH  :=
 # set REATIVE to the next higher directory 
 # and defer to the Makefile.due there
 RELATIVE := $(RELATIVE)../../
-include $(RELATIVE)Makefile.native
+include $(RELATIVE)Makefile.due
