--- a/opdracht2/5makeinmake/Makefile
+++ b/opdracht2/5makeinmake/Makefile
@@ -7,20 +7,25 @@
 # This file is in the public domain.
 # 
 #############################################################################
-
 # source & header files in this project (main.cpp is automatically assumed)
+maak := make -f maakfile
 
 HEADERS += note.hpp
-HEADERS += melody.hpp
 HEADERS += note_player.hpp
 HEADERS += fur_elise.hpp
 
+HEADERS += melody.hpp
 SOURCES += melody.cpp
+
 HEADERS += note_player_gpio.hpp
 SOURCES += note_player_gpio.cpp
 
 HEADERS += rtttl_player.hpp
 SOURCES += rtttl_player.cpp
+
+melody.cpp:
+	$(maak) bouwen
+	$(maak) schoonmaken
 
 # other places to look for files for this project
 SEARCH  := 
