dingen voor wsl

--- a/opdracht1/deel 1/Makefile
+++ b/opdracht1/deel 1/Makefile
@@ -20,4 +20,4 @@ SEARCH  :=
 # set REATIVE to the next higher directory 
 # and defer to the Makefile.due there
 RELATIVE := $(RELATIVE)../..
-include $(RELATIVE)/Makefile.due
+include $(RELATIVE)/Makefile.native
