--- a/Makefile.due
+++ b/Makefile.due
@@ -10,7 +10,7 @@
 
 # settings for Arduino Due projects
 TARGET            ?= arduino_due
-SERIAL_PORT       ?= /dev/ttyUSB0
+SERIAL_PORT       ?= COM4
 CONSOLE_BAUDRATE  ?= 2400
 STACK_SIZE        ?= 81920
 HEAP              ?= BMPTK
